--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "json-server",
+  "name": "guest-list-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A guest list API using json-server",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^1.0.0"
   }
 }
